--- a/groupSection.html
+++ b/groupSection.html
@@ -7,27 +7,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="./bootstrap-5.2.3-dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
     integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
     crossorigin="anonymous"></script>
 
-
-
-
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"
     integrity="sha512-L+sMmtHht2t5phORf0xXFdTC0rSlML1XcraLTrABli/0MMMylsJi3XA23ReVQkZ7jLkOEIMicWGItyK4CAt2Xw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./bootstrap-5.2.3-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/framework.css">
   <link rel="stylesheet" href="./css/master.css">
   <title>Dashboard</title>
@@ -118,6 +117,10 @@
             <button type="submit" class="search-button searchGroupBtn"><i class="fa fa-search"></i></button>
           </div>
         </form>
+        <div class=" d-flex align-center flex-grow-1 mx-1 " >
+          <iconify-icon class="mx-1 copyIcon" icon="bi:copy" width="20" height="20" data-toggle="tooltip" data-placement="top" title="Copy Link of Group" ></iconify-icon>
+          <!-- <input type="text" id="textToCopy" readonly > -->
+        </div>
         <div class="icons d-flex align-center">
           <span class="notification p-relative">
             <i class="fa-regular fa-bell fa-lg"></i>
@@ -214,85 +217,86 @@
 
               <!-- email btn  -->
 
-        <button id="emailBtnM" data-bs-toggle="modal" data-bs-target="#groupEmail" type="submit"
-        class="btn button mx-1"><iconify-icon class="qrIcon mx-1" icon="bi:envelope" width="23"
-          height="23"></iconify-icon>
-        <p class="mb-0">Email</p>
-      </button>
+              <button id="emailBtnM" data-bs-toggle="modal" data-bs-target="#groupEmail" type="submit"
+                class="btn button mx-1"><iconify-icon class="qrIcon mx-1" icon="bi:envelope" width="23"
+                  height="23"></iconify-icon>
+                <p class="mb-0">Email</p>
+              </button>
 
-      <div class="modal fade" id="groupEmail" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="alertMsg"></div>
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">Please Fillfull All Inputs
-              </h1>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
+              <div class="modal fade" id="groupEmail" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="alertMsg"></div>
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h1 class="modal-title fs-5" id="exampleModalLabel">Please Fillfull All Inputs
+                      </h1>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
 
-              <form method="POST" id="frmEmail">
-                <div class="form-group form-floating mb-3 frmDiv ">
+                      <form method="POST" id="frmEmail">
+                        <div class="form-group form-floating mb-3 frmDiv ">
 
 
-                  <div class="form-group form-floating mt-3" style="display:none ;">
-                    <input name="Employee" type="text" id="emailEmployee" class="form-control">
-                    <label for="emailEmployee">Employee</label>
+                          <div class="form-group form-floating mt-3" style="display:none ;">
+                            <input name="Employee" type="text" id="emailEmployee" class="form-control">
+                            <label for="emailEmployee">Employee</label>
+                          </div>
+                        </div>
+
+                        <div class="form-group form-floating" style="display:none ;">
+                          <input name="Student Num" type="number" placeholder="Student Num" id="emailStudentNum"
+                            class="form-control">
+                          <label for="emailStudentNum">Student Num</label>
+                        </div>
+
+
+                        <div class="form-group form-floating" style="display:none ;">
+                          <input name="Timestamp" type="text" placeholder="Student Num" id="emailTimestamp"
+                            class="form-control">
+                          <label for="emailTimestamp">Student Num</label>
+                        </div>
+
+                        <div class="form-floating mt-3">
+                          <select class="form-select" id="EmailSelect">
+                            <!-- code come from iterate -->
+                            <option selected></option>
+                            <option value="call me">call me </option>
+                          </select>
+                          <label for="EmailSelect">select Email</label>
+                        </div>
+
+                        <div class="form-group mt-3 form-floating">
+                          <input name="Subject" class="form-control" placeholder="Nots" id="EmailSubject" rows="10"
+                            required></input>
+                          <label for="EmailSubject" class="form-label">Subject</label>
+                        </div>
+
+
+                        <div class="form-group mt-3 form-floating">
+                          <textarea name="Email" class="form-control" placeholder="Nots" id="EmailTextarea" rows="10"
+                            required></textarea>
+                          <label for="EmailTextarea" class="form-label">Email</label>
+                        </div>
+
+
+                        <div class="my-3">
+                          <div class="error-message"></div>
+                          <div dir="ltr" class="sent-message text-center alert alert-success d-none" id="msg"></div>
+
+                        </div>
+                        <div class="d-flex justify-content-center mt-3">
+                          <button class="btn btn-primary scrollto btn-info text-light d-flex emailBtn" type="submit">
+                            Submit
+                            <div id="spinner-container4"></div>
+                          </button>
+                        </div>
+                      </form>
+                    </div>
                   </div>
                 </div>
-
-                <div class="form-group form-floating" style="display:none ;">
-                  <input name="Student Num" type="number" placeholder="Student Num" id="emailStudentNum"
-                    class="form-control">
-                  <label for="emailStudentNum">Student Num</label>
-                </div>
-
-
-                <div class="form-group form-floating" style="display:none ;">
-                  <input name="Timestamp" type="text" placeholder="Student Num" id="emailTimestamp"
-                    class="form-control">
-                  <label for="emailTimestamp">Student Num</label>
-                </div>
-
-                <div class="form-floating mt-3">
-                  <select class="form-select" id="EmailSelect">
-                    <!-- code come from iterate -->
-                    <option selected></option>
-                    <option value="call me">call me </option>
-                  </select>
-                  <label for="EmailSelect">select Email</label>
-                </div>
-
-                <div class="form-group mt-3 form-floating">
-                  <input name="Subject" class="form-control" placeholder="Nots" id="EmailSubject" rows="10"
-                    required></input>
-                  <label for="EmailSubject" class="form-label">Subject</label>
-                </div>
-
-
-                <div class="form-group mt-3 form-floating">
-                  <textarea name="Email" class="form-control" placeholder="Nots" id="EmailTextarea" rows="10"
-                    required></textarea>
-                  <label for="EmailTextarea" class="form-label">Email</label>
-                </div>
-
-
-                <div class="my-3">
-                  <div class="error-message"></div>
-                  <div dir="ltr" class="sent-message text-center alert alert-success d-none" id="msg"></div>
-
-                </div>
-                <div class="d-flex justify-content-center mt-3">
-                  <button class="btn btn-primary scrollto btn-info text-light d-flex emailBtn" type="submit">
-                    Submit
-                    <div id="spinner-container4"></div>
-                  </button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
+              </div>
             </div>
             <!-- <button id="openPopupButton">Add Complaint</button> -->
             <div id="popupContainer">
@@ -393,9 +397,9 @@
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"></script> -->
 
-    <script src="./bootstrap-5.2.3-dist/js/bootstrap.min.js"></script>
-    <script src="./bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+      <script src="./bootstrap-5.2.3-dist/js/bootstrap.min.js"></script>
+      <script src="./bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
 
 
