--- a/groupSection.html
+++ b/groupSection.html
@@ -7,12 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="./bootstrap-5.2.3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./bootstrap-5.2.3-dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
@@ -27,8 +27,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css"
     integrity="sha512-L+sMmtHht2t5phORf0xXFdTC0rSlML1XcraLTrABli/0MMMylsJi3XA23ReVQkZ7jLkOEIMicWGItyK4CAt2Xw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/framework.css">
-  <link rel="stylesheet" href="./css/master.css">
+  <link rel="stylesheet" href="/css/framework.css">
+  <link rel="stylesheet" href="/css/master.css">
   <title>Dashboard</title>
 </head>
 
@@ -109,6 +109,7 @@
       <!--start head  -->
       <div class="head p-15 bg-white between-flex">
         <form class="searchCon">
+          <div class="alertMsg"></div>
           <div class="search p-relative">
             <input style="border-radius: 40px 0px 0px 40px;" class="rad-15" type="search" id="searchGroup" name="search"
               placeholder="Write ID....">
@@ -117,8 +118,9 @@
             <button type="submit" class="search-button searchGroupBtn"><i class="fa fa-search"></i></button>
           </div>
         </form>
-        <div class=" d-flex align-center flex-grow-1 mx-1 " >
-          <iconify-icon class="mx-1 copyIcon" icon="bi:copy" width="20" height="20" data-toggle="tooltip" data-placement="top" title="Copy Link of Group" ></iconify-icon>
+        <div class=" d-flex align-center flex-grow-1 mx-1 ">
+          <iconify-icon class="mx-1 copyIcon" icon="bi:copy" width="20" height="20" data-toggle="tooltip"
+            data-placement="top" title="Copy Link of Group"></iconify-icon>
           <!-- <input type="text" id="textToCopy" readonly > -->
         </div>
         <div class="icons d-flex align-center">
@@ -137,10 +139,12 @@
 
         <div class="activities p-20 bg-white rad-10 mt-20">
           <div class="box">
-            <div class="d-flex">
+            <div class="d-flex  w-100">
               <h2 class="mt-2 mb-1 mx-4 fw-bold">Groups</h2>
+
+
               <!-- sms btn  -->
-              <button id="smsBtnM" data-bs-toggle="modal" data-bs-target="#groupsms" type="submit"
+              <button id="smsBtnG" data-bs-toggle="modal" data-bs-target="#groupsms" type="submit"
                 class="btn button mx-1"><iconify-icon class="qrIcon mx-1" icon="bi:chat-square-text" width="23"
                   height="23"></iconify-icon>
                 <p class="mb-0">SMS</p>
@@ -158,7 +162,7 @@
                     </div>
                     <div class="modal-body">
 
-                      <form method="POST" id="frmSms">
+                      <form method="POST" id="frmSmsGroup">
                         <div class="form-group form-floating mb-3 frmDiv ">
 
 
@@ -169,9 +173,9 @@
                         </div>
 
                         <div class="form-group form-floating" style="display:none ;">
-                          <input name="Student Num" type="number" placeholder="Student Num" id="smsStudentNum"
+                          <input name="Group Num" type="number" placeholder="Student Num" id="smsGroupNum"
                             class="form-control">
-                          <label for="smsStudentNum">Student Num</label>
+                          <label for="smsGroupNum">Student Num</label>
                         </div>
 
 
@@ -206,7 +210,7 @@
                         <div class="d-flex justify-content-center mt-3">
                           <button class="btn btn-primary scrollto btn-info text-light d-flex smsBtn" type="submit">
                             Send
-                            <div id="spinner-container3"></div>
+                            <div id="spinner-container"></div>
                           </button>
                         </div>
                       </form>
@@ -216,87 +220,111 @@
               </div>
 
               <!-- email btn  -->
+              <div class="d-flex  flex-grow-1">
+                <button id="emailBtnG" data-bs-toggle="modal" data-bs-target="#groupEmail" type="submit"
+                  class="btn button mx-1"><iconify-icon class="qrIcon mx-1" icon="bi:envelope" width="23"
+                    height="23"></iconify-icon>
+                  <p class="mb-0">Email</p>
+                </button>
 
-              <button id="emailBtnM" data-bs-toggle="modal" data-bs-target="#groupEmail" type="submit"
-                class="btn button mx-1"><iconify-icon class="qrIcon mx-1" icon="bi:envelope" width="23"
-                  height="23"></iconify-icon>
-                <p class="mb-0">Email</p>
-              </button>
+                <div class="modal fade" id="groupEmail" tabindex="-1" aria-labelledby="exampleModalLabel"
+                  aria-hidden="true">
+                  <div class="alertMsg"></div>
+                  <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Please Fillfull All Inputs
+                        </h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
 
-              <div class="modal fade" id="groupEmail" tabindex="-1" aria-labelledby="exampleModalLabel"
-                aria-hidden="true">
-                <div class="alertMsg"></div>
-                <div class="modal-dialog modal-dialog-centered">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <h1 class="modal-title fs-5" id="exampleModalLabel">Please Fillfull All Inputs
-                      </h1>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-
-                      <form method="POST" id="frmEmail">
-                        <div class="form-group form-floating mb-3 frmDiv ">
+                        <form method="POST" id="frmEmailGroup">
+                          <div class="form-group form-floating mb-3 frmDiv ">
 
 
-                          <div class="form-group form-floating mt-3" style="display:none ;">
-                            <input name="Employee" type="text" id="emailEmployee" class="form-control">
-                            <label for="emailEmployee">Employee</label>
+                            <div class="form-group form-floating mt-3" style="display:none ;">
+                              <input name="Employee" type="text" id="emailEmployee" class="form-control">
+                              <label for="emailEmployee">Employee</label>
+                            </div>
                           </div>
-                        </div>
 
-                        <div class="form-group form-floating" style="display:none ;">
-                          <input name="Student Num" type="number" placeholder="Student Num" id="emailStudentNum"
-                            class="form-control">
-                          <label for="emailStudentNum">Student Num</label>
-                        </div>
-
-
-                        <div class="form-group form-floating" style="display:none ;">
-                          <input name="Timestamp" type="text" placeholder="Student Num" id="emailTimestamp"
-                            class="form-control">
-                          <label for="emailTimestamp">Student Num</label>
-                        </div>
-
-                        <div class="form-floating mt-3">
-                          <select class="form-select" id="EmailSelect">
-                            <!-- code come from iterate -->
-                            <option selected></option>
-                            <option value="call me">call me </option>
-                          </select>
-                          <label for="EmailSelect">select Email</label>
-                        </div>
-
-                        <div class="form-group mt-3 form-floating">
-                          <input name="Subject" class="form-control" placeholder="Nots" id="EmailSubject" rows="10"
-                            required></input>
-                          <label for="EmailSubject" class="form-label">Subject</label>
-                        </div>
+                          <div class="form-group form-floating" style="display:none ;">
+                            <input name="Group Num" type="number" placeholder="Student Num" id="emailGroupNum"
+                              class="form-control">
+                            <label for="emailGroupNum">Student Num</label>
+                          </div>
 
 
-                        <div class="form-group mt-3 form-floating">
-                          <textarea name="Email" class="form-control" placeholder="Nots" id="EmailTextarea" rows="10"
-                            required></textarea>
-                          <label for="EmailTextarea" class="form-label">Email</label>
-                        </div>
+                          <div class="form-group form-floating" style="display:none ;">
+                            <input name="Timestamp" type="text" placeholder="Student Num" id="emailTimestamp"
+                              class="form-control">
+                            <label for="emailTimestamp">Student Num</label>
+                          </div>
+
+                          <div class="form-floating mt-3">
+                            <select class="form-select" id="EmailSelectG">
+                              <!-- code come from iterate -->
+                              <option selected></option>
+                              <option value="call me">call me </option>
+                            </select>
+                            <label for="EmailSelectG">select Email</label>
+                          </div>
+
+                          <div class="form-group mt-3 form-floating">
+                            <input name="Subject" class="form-control" placeholder="Nots" id="EmailSubject" rows="10"
+                              required></input>
+                            <label for="EmailSubject" class="form-label">Subject</label>
+                          </div>
 
 
-                        <div class="my-3">
-                          <div class="error-message"></div>
-                          <div dir="ltr" class="sent-message text-center alert alert-success d-none" id="msg"></div>
+                          <div class="form-group mt-3 form-floating">
+                            <textarea name="Email" class="form-control" placeholder="Nots" id="EmailTextarea" rows="10"
+                              required></textarea>
+                            <label for="EmailTextarea" class="form-label">Email</label>
+                          </div>
 
-                        </div>
-                        <div class="d-flex justify-content-center mt-3">
-                          <button class="btn btn-primary scrollto btn-info text-light d-flex emailBtn" type="submit">
-                            Submit
-                            <div id="spinner-container4"></div>
-                          </button>
-                        </div>
-                      </form>
+
+                          <div class="my-3">
+                            <div class="error-message"></div>
+                            <div dir="ltr" class="sent-message text-center alert alert-success d-none" id="msg"></div>
+
+                          </div>
+                          <div class="d-flex justify-content-center mt-3">
+                            <button class="btn btn-primary scrollto btn-info text-light d-flex emailBtn" type="submit">
+                              Submit
+                              <div id="spinner-emmailG"></div>
+                            </button>
+                          </div>
+                        </form>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
+
+              <!-- print group -->
+                <form method="POST" id="printG" class="d-flex mx-3">
+                  <button data-toggle="tooltip" data-placement="top" title="Print Group" id="printG" type="submit"
+                    class="btn button printGBtn mx-1 "><iconify-icon class="qrIcon mx-1" icon="bi:printer" width="23"
+                      height="23"></iconify-icon>
+                    <p class="mb-0"></p>
+                    <div id="spinner-container5"></div>
+                  </button>
+                  <div class="form-group form-floating" style="display:none ;">
+                    <input name="Group Num" type="number" placeholder="Scholarship" id="qrCodeId" class="form-control">
+                    <label for="qrCodeId">Scholarship</label>
+                  </div>
+                  <div class="form-group form-floating" style="display:none ;">
+                    <input name="Employee" type="text" placeholder="Scholarship" id="Emp" class="form-control">
+                    <label for="Emp">Scholarship</label>
+                  </div>
+                  <div class="form-group form-floating" style="display:none ;">
+                    <input name="Timestamp" type="text" placeholder="Scholarship" id="Timestamp" class="form-control">
+                    <label for="Timestamp">Scholarship</label>
+                  </div>
+                </form>
+
             </div>
             <!-- <button id="openPopupButton">Add Complaint</button> -->
             <div id="popupContainer">
@@ -397,14 +425,16 @@
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"></script> -->
 
-      <script src="./bootstrap-5.2.3-dist/js/bootstrap.min.js"></script>
-      <script src="./bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./bootstrap-5.2.3-dist/js/bootstrap.min.js"></script>
+    <script src="./bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
 
 
     <!-- <script src="./js pages/main.js"></script> -->
     <script src="./js pages/groupSection.js"></script>
+    <script src="/js pages/smsGroup.js"></script>
+    <script src="/js pages/EmailGroup.js"></script>
 </body>
 
 </html>
