--- a/invoice.html
+++ b/invoice.html
@@ -101,15 +101,18 @@
             <!--start head  -->
 
             <div class="head bg-white between-flex">
-                <!-- <form class="searchCon">
-                    <div class="search p-relative">
+
+                <form class="searchCon">
+                <div class="alertMsg" id="alertMsg2"></div>
+
+                     <!--<div class="search p-relative">
                         <input class="rad-15" type="search" id="searchInput" name="search" placeholder="Write ID...."
                             required>
                     </div>
                     <div class="search-container">
                         <button type="submit" class="search-button"><i class="fa fa-search"></i></button>
-                    </div>
-                </form> -->
+                    </div>-->
+                </form> 
                 <div>
                     <!-- <img style="width: 60px;" src="./imgs/1615473689936.jfif" alt="" srcset=""> -->
                 </div>
@@ -162,7 +165,6 @@
                         </button>
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                             aria-hidden="true">
-                            <div class="alertMsg"></div>
                             <div class="modal-dialog modal-dialog-centered">
                                 <div class="modal-content">
                                     <div class="modal-header">
@@ -180,7 +182,8 @@
                                                 <label for="floatingInput">Amount</label>
                                             </div>
                                             <div class="form-floating mt-3">
-                                                <select class="form-select" id="floatingSelect" name="Cash type" required>
+                                                <select class="form-select" id="floatingSelect" name="Cash type"
+                                                    required>
                                                     <option selected></option>
                                                     <option value="cash">cash</option>
                                                     <option value="Vodafone cash">Vodafone cash</option>
@@ -227,7 +230,8 @@
                                             </div>
 
                                             <div class="form-floating mt-3">
-                                                <select class="form-select" id="floatingSelect" name="payment sub cat" required>
+                                                <select class="form-select" id="floatingSelect" name="payment sub cat"
+                                                    required>
                                                     <option selected></option>
                                                     <option value="ID">ID</option>
                                                     <option value="ReTest">ReTest</option>
