--- a/SRM.html
+++ b/SRM.html
@@ -279,9 +279,9 @@
         <!-- email btn  -->
 
         <button disabled id="emailBtnM" data-bs-toggle="modal" data-bs-target="#exampleModal4" type="submit"
-          class="btn button mx-1"><iconify-icon class="qrIcon mx-1" icon="bi:envelope" width="23"
+          class="btn button mx-1"><iconify-icon style="color: #C5221F;" class="qrIcon mx-1" icon="bi:envelope" width="23"
             height="23"></iconify-icon>
-          <p class="mb-0">Email</p>
+          <p class="mb-0" style="color: black;">Email</p>
         </button>
 
         <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -360,9 +360,9 @@
 
         <!-- sms btn  -->
         <button disabled id="smsBtnM" data-bs-toggle="modal" data-bs-target="#exampleModal2" type="submit"
-          class="btn button mx-1"><iconify-icon class="qrIcon mx-1" icon="bi:chat-square-text" width="23"
+          class="btn button mx-1"><iconify-icon class="qrIcon mx-1 text-success" icon="bi:chat-square-text" width="23"
             height="23"></iconify-icon>
-          <p class="mb-0">SMS</p>
+          <p class="mb-0" style="color: black;">SMS</p>
         </button>
 
         <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -521,7 +521,7 @@
         </div>
 
         <form method="POST" id="digitalId">
-          <button disabled id="digitalId" type="submit" class="btn button digitalIdBtn mx-1"><iconify-icon
+          <button disabled id="digitalId" type="submit" class="btn button digitalIdBtn mx-1"><iconify-icon style="color: black;"
               class="qrIcon mx-1" icon="bi:qr-code" width="23" height="23"></iconify-icon>
             <p class="mb-0">QR</p>
             <div id="spinner-container5"></div>
@@ -542,7 +542,7 @@
         </form>
 
         <form method="POST" id="App">
-          <button disabled id="App" type="submit" class="btn button appBtn mx-2"><iconify-icon class="qrIcon mx-1"
+          <button disabled id="App" type="submit" class="btn button appBtn mx-2"><iconify-icon class="qrIcon mx-1" style="color: #F1B708;"
               icon="ic:twotone-app-shortcut" width="23" height="23"></iconify-icon>
             <p class="mb-0">App</p>
             <div id="spinner-container1"></div>
@@ -599,7 +599,7 @@
                 <button disabled id="cancel" type="submit" data-bs-toggle="modal" data-bs-target="#exampleModal7"
                   class="btn button mx-1 mt-2"><iconify-icon style="color: red;" class="qrIcon mx-1"
                     icon="bi:x-circle" width="23" height="23"></iconify-icon>
-                  <p class="mb-0" style="color: red;">Cancel</p>
+                  <p class="mb-0" >Cancel</p>
                   <!-- <div id="spinner-container"></div> -->
                 </button>
               </div>
