--- a/SRM.html
+++ b/SRM.html
@@ -468,7 +468,7 @@
                     </div>
 
                     <div class="form-group form-floating mt-3">
-                      <input name="Module Code" type="text" id="ModuleCodeSelect" class="form-control">
+                      <input name="Module Code" type="text" id="ModuleCodeSelect" class="form-control" required >
                       <label for="ModuleCodeSelect">Module Code</label>
                     </div>
 
@@ -484,7 +484,7 @@
                     </div>
                   </div>
 
-                  <div class="form-group form-floating" style="display:none ;">
+                  <div class="form-group form-floating" style="display:none;">
                     <input name="Student Num" type="number" placeholder="Student Num" id="StudentNum"
                       class="form-control">
                     <label for="StudentNum">Student Num</label>
